lab1/Test/L1-A-0-62.output
Error Type A at Line 2
Error Type A at Line 4
Error Type A at Line 11
Error Type A at Line 16
Error Type A at Line 17
