lab1/Test/L1-A-0-62.cmm
int UM10YN5nV9hqQXDN ( int uo7hLqPq8JaRAoP6 , int 
  &IP8QtoWfCk , float YzcCyN0TrAzvKPV3VS3 , int AaFtPoLkKhOq 
  ) {
  float HrqpbMyvPMQ ^;
}
float ;
int IwenvCLNym_J ( int yatESvrfp [ 1155916690 ] ) 
  {
  float lA6Ft6NReazxu6On [ 1402240029 ] , YhxiyTtvKt3q_AMKWl1u 
    ;
  return ! yKy + WyWwKs @+ x - kpizEitwn7 + OoJoKbZYsbN 
    + f2IKhLoo934fRHZQ0I7 + BbvWs2S4HuwyFNn - sYMPKvVrfRjBSQi 
    >= L82wbJSh9NoTctI8NRND > cP0nL0aNxYYW <= LgB5jWAf1 
    < p6bYdH_lBt5a2nO != RKqu > vHei4GVMKsQpFUbXKev && 
    hgXu2fK43YiumlrZ && S55bxbzCPSgI || qpoDBd ;
  ! y = At0XEiyfOvR5w :;
$}
